fix: update gap utility to tokens

--- a/source/utilities/gap/style.scss
+++ b/source/utilities/gap/style.scss
@@ -1,30 +1,30 @@
 @use "sass:map";
-@use "../setting/var_default";
+@use "../../sass/mixin/tokens";
+@use "../../sass/mixin/build-utility";
 
-.u-gap-0 {
-  gap: 0 !important;
+$_: "u-gap*";
+
+@include tokens.create($_, ("space"));
+
+$spacers: (
+    "0": 0,
+    "1": tokens.use($_, "space", 1),
+    "2": tokens.use($_, "space", 2),
+    "3": tokens.use($_, "space", 3),
+    "4": tokens.use($_, "space", 4),
+    "5": tokens.use($_, "space", 5),
+    "6": tokens.use($_, "space", 6),
+    "7": tokens.use($_, "space", 7),
+    "8": tokens.use($_, "space", 8),
+);
+
+$mods: ();
+
+@each $size, $length in $spacers {
+    $mods: map.merge($mods, (#{$size}: (gap: #{$length})));
 }
-.u-gap-1 {
-  gap: map.get(var_default.$spacers, "1") !important;
-}
-.u-gap-2 {
-  gap: map.get(var_default.$spacers, "2") !important;
-}
-.u-gap-3 {
-  gap: map.get(var_default.$spacers, "3") !important;
-}
-.u-gap-4 {
-  gap: map.get(var_default.$spacers, "4") !important;
-}
-.u-gap-5 {
-  gap: map.get(var_default.$spacers, "5") !important;
-}
-.u-gap-6 {
-  gap: map.get(var_default.$spacers, "6") !important;
-}
-.u-gap-7 {
-  gap: map.get(var_default.$spacers, "7") !important;
-}
-.u-gap-8 {
-  gap: map.get(var_default.$spacers, "8") !important;
-}
+
+@include build-utility.build-utilities(((
+    name: "gap",
+    modifiers: $mods
+)));
